2004-02-19  Rodney Dawes  <dobey@ximian.com>

	* em-folder-tree.c (emft_save_state): Revert previous change, doh

2004-02-19  Rodney Dawes  <dobey@ximian.com>

	* em-folder-tree.c (emft_save_state): Don't set the timeout id to 0
	and then immediately return FALSE, which tries to remove the timeout

2004-02-19  Not Zed  <NotZed@Ximian.com>

	* mail-send-recv.c (get_receive_type): 
	* mail-config.c (mail_config_get_account_by_source_url) 
	(mail_config_get_account_by_transport_url): 
	* mail-component.c (mail_component_load_store_by_uri): 
	* mail-account-gui.c (mail_account_gui_setup) 
	(mail_account_gui_save): 
	* em-utils.c (em_utils_empty_trash, em_uri_from_camel): 
	* em-folder-tree-model.c (account_changed):
	* em-folder-selector.c (em_folder_selector_get_selected_uri): fix
	camel provider api changes.

2004-02-18  Jeffrey Stedfast  <fejj@ximian.com>

	* em-composer-prefs.c (sig_fill_list): Changed the name to not
	imply we are working with a GtkCList widget (since we are using a
	GtkTreeView).

	* em-folder-tree.c (emft_tree_button_press): Pass flags to
	em_popup_target_new_folder() instead of just an isstore arg.
	(emft_tree_button_press): Fake the fi flags for vTrash/vJunk so
	that em-popup.c can disable the delete flag for these.

	* em-popup.c (em_popup_target_new_folder): Instead of taking an
	isstore argument, take a flags argument so that our caller can
	give us hints about the selected folder/store. Also fixed a logic
	bug from my previous commit.

2004-02-12  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.c (emft_tree_button_press): Updated for em-popup
	API change (altho currently passes a dummy value).

	* em-popup.c (em_popup_target_new_folder): Check for vTrash/vJunk
	by checking the CAMEL_FOLDER_VIRTUAL info flags bit. (perhaps this
	flag should be renamed to SPECIAL? VIRTUAL might not have been a
	good name). Also changed to check flags & CAMEL_FOLDER_NOSELECT
	rather than checking the uri string for a noselect param.
